use the new card view

--- a/gearshift/src/main/res/layout/torrent_detail_files.xml
+++ b/gearshift/src/main/res/layout/torrent_detail_files.xml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/CardContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:id="@+id/torrent_detail_files_expander"
-        style="@style/CardHeaderExpander" >
-
-        <TextView
-            style="@style/CardHeaderExpanderText"
-            android:text="@string/torrent_files" />
-
-        <View
-            android:id="@+id/torrent_detail_files_expander_image"
-            style="@style/CardHeaderExpanderImage" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/torrent_detail_files_content"
         android:orientation="vertical"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        style="@style/CardContentCollapsed" >
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:id="@+id/torrent_detail_files_expander"
+            style="@style/CardHeaderExpander" >
+
+            <TextView
+                style="@style/CardHeaderExpanderText"
+                android:text="@string/torrent_files" />
+
+            <View
+                android:id="@+id/torrent_detail_files_expander_image"
+                style="@style/CardHeaderExpanderImage" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/torrent_detail_files_content"
+            android:orientation="vertical"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            style="@style/CardContentCollapsed" >
+        </LinearLayout>
+
     </LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
