--- a/gearshift/src/main/res/values/styles.xml
+++ b/gearshift/src/main/res/values/styles.xml
@@ -60,12 +60,11 @@
     </style>
     
     <style name="CardContainer">
-   	    <item name="android:background">@drawable/card_background</item>
         <item name="android:layout_marginLeft">12dp</item>
         <item name="android:layout_marginRight">12dp</item>
-   	    <item name="android:layout_marginTop">4dp</item>
+   	    <item name="android:layout_marginTop">0dp</item>
    	    <item name="android:layout_marginBottom">4dp</item>
-        <item name="android:orientation">vertical</item>
+        <item name="cardCornerRadius">2dp</item>
     </style>
         
     <style name="CardHeaderExpander">
