--- a/gearshift/src/main/res/drawable/border_bottom.xml
+++ b/gearshift/src/main/res/drawable/border_bottom.xml
@@ -7,7 +7,7 @@
 	</item>
 	<item android:bottom="2dp">
 	    <shape android:shape="rectangle">
-	        <solid android:color="#fff" />
+	        <solid android:color="#fafafa" />
 	    </shape>
 	</item>
 </layer-list>
