--- a/gearshift/src/main/res/values/colors.xml
+++ b/gearshift/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="primary">#212121</color>
     <color name="primary_dark">#131313</color>
-    <color name="control_highlight">#039be5</color>
+    <color name="control_highlight">#009887</color>
     <color name="control_activated">#00796b</color>
     <color name="accent">#b60000</color>
 
